tests/snapshots/snapshot_test__doctor_validate_output.snap
---
source: tests/snapshot_test.rs
expression: sorted_output
---
📄 with_errors.cook
  ❌ Missing reference: ./nonexistent

📄 with_errors.cook
Warning: The '>>' syntax for metadata is deprecated, use a YAML frontmatter
  ╭─[with_errors.cook]
  │
1 │ >> title: Recipe with Errors
  ┆   ──────────────────────────
──╯
Help: Replace the entries with this at the top of the document:
---
title: Recipe with Errors
---
=== Recipe References ===

=== Validation Summary ===
Total recipes scanned: 5
❌ 1 error(s) found in 1 recipe(s)
⚠️  1 warning(s) found in 1 recipe(s)
