tests/snapshots/snapshot_test__recipe_human_output.snap
---
source: tests/snapshot_test.rs
assertion_line: 24
expression: stdout
---
 Simple Recipe 

servings: 2

Ingredients:
  pasta      200 g  
  salt       1 tsp  
  water      2 cups 

Cookware:
  pot      

Steps:
 1. Boil water for 5 minutes. Add salt and pasta. Cook in a pot for another
    10 minutes.
     [water: 2 cups, salt: 1 tsp, pasta: 200 g]
