tests/snapshots/snapshot_test__recipe_human_output_snapshot.snap
---
source: tests/snapshot_test.rs
expression: stdout
---
 simple 

servings: 2

Ingredients:
  water      2 cups 
  salt       1 tsp  
  pasta      200 g  

Cookware:
  5        
  pot      
  10       

Steps:
 1. Boil water for 5%minutes. Add salt and pasta. Cook in a pot for another
    10%minutes.
     [water: 2 cups, salt: 1 tsp, pasta: 200 g]
