tests/snapshots/snapshot_test__recipe_json_structure_snapshot.snap
---
source: tests/snapshot_test.rs
expression: pretty_json
---
{
  "cookware": [
    {
      "alias": null,
      "name": "griddle",
      "note": null,
      "quantity": null,
      "relation": {
        "defined_in_step": true,
        "referenced_from": [],
        "type": "definition"
      }
    },
    {
      "alias": null,
      "name": "3",
      "note": null,
      "quantity": null,
      "relation": {
        "defined_in_step": true,
        "referenced_from": [],
        "type": "definition"
      }
    }
  ],
  "ingredients": [
    {
      "alias": null,
      "modifiers": "",
      "name": "flour",
      "note": null,
      "quantity": {
        "scalable": true,
        "unit": "cups",
        "value": {
          "type": "number",
          "value": {
            "type": "regular",
            "value": 2.0
          }
        }
      },
      "reference": null,
      "relation": {
        "reference_target": null,
        "relation": {
          "defined_in_step": true,
          "referenced_from": [],
          "type": "definition"
        }
      }
    },
    {
      "alias": null,
      "modifiers": "",
      "name": "milk",
      "note": null,
      "quantity": {
        "scalable": true,
        "unit": "cups",
        "value": {
          "type": "number",
          "value": {
            "type": "regular",
            "value": 1.5
          }
        }
      },
      "reference": null,
      "relation": {
        "reference_target": null,
        "relation": {
          "defined_in_step": true,
          "referenced_from": [],
          "type": "definition"
        }
      }
    },
    {
      "alias": null,
      "modifiers": "",
      "name": "eggs",
      "note": null,
      "quantity": {
        "scalable": true,
        "unit": null,
        "value": {
          "type": "number",
          "value": {
            "type": "regular",
            "value": 2.0
          }
        }
      },
      "reference": null,
      "relation": {
        "reference_target": null,
        "relation": {
          "defined_in_step": true,
          "referenced_from": [],
          "type": "definition"
        }
      }
    },
    {
      "alias": null,
      "modifiers": "",
      "name": "sugar",
      "note": null,
      "quantity": {
        "scalable": true,
        "unit": "tbsp",
        "value": {
          "type": "number",
          "value": {
            "type": "regular",
            "value": 2.0
          }
        }
      },
      "reference": null,
      "relation": {
        "reference_target": null,
        "relation": {
          "defined_in_step": true,
          "referenced_from": [],
          "type": "definition"
        }
      }
    }
  ],
  "inline_quantities": [],
  "metadata": {
    "map": {
      "servings": 4,
      "title": "Pancakes"
    }
  },
  "sections": [
    {
      "content": [
        {
          "type": "step",
          "value": {
            "items": [
              {
                "type": "text",
                "value": "Mix "
              },
              {
                "index": 0,
                "type": "ingredient"
              },
              {
                "type": "text",
                "value": " with "
              },
              {
                "index": 1,
                "type": "ingredient"
              },
              {
                "type": "text",
                "value": ". Add "
              },
              {
                "index": 2,
                "type": "ingredient"
              },
              {
                "type": "text",
                "value": " and "
              },
              {
                "index": 3,
                "type": "ingredient"
              },
              {
                "type": "text",
                "value": ". Cook on a "
              },
              {
                "index": 0,
                "type": "cookware"
              },
              {
                "type": "text",
                "value": " for "
              },
              {
                "index": 1,
                "type": "cookware"
              },
              {
                "type": "text",
                "value": "%minutes per side."
              }
            ],
            "number": 1
          }
        }
      ],
      "name": null
    }
  ],
  "timers": []
}
