tests/snapshots/snapshot_test__recipe_markdown_output.snap
---
source: tests/snapshot_test.rs
expression: stdout
---
---
title: Pancakes
servings: 4
name: Pancakes
---

# Pancakes

## Ingredients

- *2 cups* flour
- *1 1/2 cups* milk
- *2* eggs
- *2 tbsp* sugar

## Cookware

- griddle

## Steps

1. Mix flour with milk. Add eggs and sugar. Cook on a griddle for 3 minutes per side.
